@@ -33,9 +33,13 @@ class LMSSmarty extends Smarty {
 
 	public function display($template = null, $cache_id = null, $compile_id = null, $parent = null) {
 		$layout = $this->getTemplateVars('layout');
-		if (!empty($layout) && array_key_exists('module', $layout))
-			$this->plugin_manager->ExecuteHook($layout['module'] . '_before_module_display',
-				array('smarty' => $this));
+		if (!empty($layout))
+			if (array_key_exists('module', $layout))
+				$this->plugin_manager->ExecuteHook($layout['module'] . '_before_module_display',
+					array('smarty' => $this));
+			elseif (array_key_exists('userpanel_module', $layout) && array_key_exists('userpanel_function', $layout))
+				$this->plugin_manager->ExecuteHook('userpanel_' . $layout['userpanel_module'] . '_' . $layout['userpanel_function'] . '_before_module_display',
+					array('smarty' => $this));
 		parent::display($template, $cache_id, $compile_id, $parent);
 	}
 }
